# bconf

./: .gitignore  GNUmakefile.in  INSTALL.md  LICENSE  Makefile  Makefile.in  README.md  bconf  bconf.l  bconf.mk  bconf.y  book.toml  configure.in  mkconf.c  mkconf.h
data/: configure.in
data/build-aware/: GNUmakefile.in  configure.in
data/host-only/: GNUmakefile.in  configure.in
docs/: SUMMARY.md  advanced-guide.md  example.md  introduction.md  template-sets.md
examples/arch-specific/: bconf.mk  hello.s
man/: bconf.5  mkconf.1
src/: bconf.l
